--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@
 
 CI_ENVIRONMENT = development
 
+RAZORPAY_KEY_ID=rzp_live_hwSl3iA5sRaf68
+RAZORPAY_SECRET_KEY=2xL2voQA7ET2yLt15vyWAjnR
+
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
